Add preliminary wayfinding template

--- a/templates/project.html
+++ b/templates/project.html
@@ -136,6 +136,7 @@
                 {% include 'project/add_link.html' %}
                 {% include 'project/member_list.html' %}
                 {% include 'project/invite_members.html' %}
+                {% include 'project/wayfinding.html' %}
             </div>
         </div>
         <div class="west">
@@ -327,6 +328,7 @@
     <script type="text/javascript" src="/static/js/tc.gam.contact.js"></script>
     <script type="text/javascript" src="/static/js/libs/jqdropdown.js"></script>
     <script type='text/javascript' src="/static/js/tc.gam.widget-visibility-handler.js"></script>
+    <script type="text/javascript" src="/static/js/pages/project.wayfinding.js"></script>
     <script type='text/javascript' src="/static/js/pages/project.js"></script>
     <script type='text/javascript' src="/static/js/pages/project.tabs.js"></script>
     <script type='text/javascript' src="/static/js/pages/project.data.js"></script>
