--- a/templates/project/wayfinding.html
+++ b/templates/project/wayfinding.html
@@ -5,7 +5,9 @@
 
 <div class="box project-section wayfinding">
   <h2 class="visibility">Visibility Meter</h2>
-  <div class="visibility meter"></div>
+  <div class="visibility meter">
+    <div class="percent-bar"></div>
+  </div>
   <p class="completion">You've already done <span class="completed-percent">0%</span>of what you can do on Change by Us to make your project successful. Why not go for <span class="hundred-percent">100%</span>?</p>
 
   <!-- Wayfinding steps -->
@@ -50,7 +52,11 @@
 </div>
 
 <script id="west_wayfinding" type="text/html">
-  <div class="box">
-    <h1>ohai</h1>
+  <div class="box admin-tools">
+    <h4 class="back"><a href="#show,home"><span class="arrow back"></span> Go back to my project</a></h4>
+    <p class="info">Welcome to the Administrator tools to manage your project.</p>
+    <a href="#" class="btn">Promotion Toolkit</a>
+    <a href="#" class="btn">Passwords &amp; Permissions</a>
+    <a href="#" class="btn">API Keys &amp; Permissions</a>
   </div>
 </script>
