Add checkbox to wayfinding items

--- a/templates/project/wayfinding.html
+++ b/templates/project/wayfinding.html
@@ -13,6 +13,7 @@
   <!-- Wayfinding steps -->
   <ol class="steps">
     <li>
+      <a href="#" class="checkbox"></a>
       <h3>Tweet, Like, or share this project on Facebook.</h3>
       <p>If you have a Twitter or Facebook account, sharing your project with friends and colleagues is a great way to prime interest in your project.</p>
       <a href="#" class="btn external">Tweet <span class="arrow"></span></a>
@@ -20,30 +21,35 @@
     </li>
 
     <li>
+      <a href="#" class="checkbox"></a>
       <h3>Print and distribute fliers using our flier creation tool</h3>
       <p>Putting up some fliers in your neighborhood or around yoru project site is a great way to engage people in your area.</p>
       <a href="#" class="btn">Make some fliers <span class="arrow"></span></a>
     </li>
 
     <li>
+      <a href="#" class="checkbox"></a>
       <h3>Plan an event for this project</h3>
       <p>Planning an event is a great way to engage people in your cause.</p>
       <a href="#show,event-form" class="btn">Go to the event planner <span class="arrow"></span></a>
     </li>
 
     <li>
+      <a href="#" class="checkbox"></a>
       <h3>Define some needs for your project</h3>
       <p>What do you need to be successful? Put out a call for volunteers and both monetary and in-kind donations.</p>
       <a href="#show,add-need" class="btn">Go add a project need <span class="arrow"></span></a>
     </li>
 
     <li>
+      <a href="#" class="checkbox"></a>
       <h3>Complete your profile</h3>
       <p>Adding a mission and a photo to your project can help raise the visibility of what you're doing.</p>
       <a href="/useraccount#user-account,account" class="btn">Go back and edit your profile <span class="arrow"></span></a>
     </li>
 
     <li>
+      <a href="#" class="checkbox"></a>
       <h3>Invite some new members</h3>
       <p>Use Change by Us' built-in invitation features to send messages to friends or find people already on Change by Us with ideas similar to your project.</p>
       <a href="#show,invite" class="btn">Go to the invitation feature <span class="arrow"></span></a>
