--- a/static/css/tc.gam.main.css
+++ b/static/css/tc.gam.main.css
@@ -3216,14 +3216,35 @@ PAGE-SPECIFIC STYLES
 .project-section.wayfinding ol.steps{
     color: #a8a7a5;
     list-style: decimal;
-    padding-left: 70px;
+    padding-left: 75px;
 }
 
 .project-section.wayfinding .steps li{
-    font-size: 22px;
+    font-size: 24px;
     margin: 20px 0 30px;
-    padding-left: 5px;
     position: relative;
+}
+
+.project-section.wayfinding .steps .checkbox{
+    border: 1px solid #e4e3e1;
+    height: 24px;
+    left: -75px;
+    position: absolute;
+    top: 2px;
+    width: 24px;
+}
+
+.project-section.wayfinding .steps li.check .checkbox{
+    background: #fff url(../images/control_close_14_red.png) no-repeat center center;
+}
+
+.project-section.wayfinding .steps li.check{
+    color: #df5f32;
+}
+
+.project-section.wayfinding .steps li.check h3{
+    color: #df5f32;
+    text-decoration: line-through;
 }
 
 .project-section.wayfinding .steps li h3{
