Add working href

--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,7 @@
       </div>
 
       <div class="apply">
-        <a href="#" class="rounded-button west">Apply by April 30</a>
+        <a href="/grants/" class="rounded-button west">Apply by April 30</a>
       </div>
     </div>
 
