--- a/static/css/tc.gam.main.css
+++ b/static/css/tc.gam.main.css
@@ -8692,6 +8692,7 @@ p.tagline{
 }
 div.grants h2{
 	margin: 24px 0px 6px 0px;
+	/*color: #03719e;	*/
 }
 div.grants ul{
 	margin:6px 0px 18px 36px;
@@ -8700,8 +8701,9 @@ div.grants ul{
 div.grants li{
 	margin-bottom:6px;
 }
-div.grants p{
+div.grants p, #wufoo p{
 	margin:0px 0px 14px 0px;
+	/* blue =03719e; orange = fe891f */
 }
 div.grants p.indent{
 	margin-left: 18px;
@@ -8717,9 +8719,9 @@ div.grants ul.list{
 div.grants p.test{
 	margin-top:-6px;
 }
-div.grants a{
+div.grants a, #wufoo a{
 	color: #03719e;
 }
-div.grants a:hover{
+div.grants a:hover, #wufoo a:hover{
 	text-decoration:underline;
 }
